--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,13 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/dusk": "^7.9",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
+        "phpunit/phpunit-selenium": "^1.3",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
